--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <h1>"Prueba"</h1>
 <h2>Prueba 2</h2>
 <p>Prueba parrafo de Esquivel lelelele</p>
+<h2>Si</h2>
+<footer>NO LEAS. BUENO YA LEISTE.</footer>
 </body>
 </html>
